--- a/src/main/gui/inserimento_turno.ui
+++ b/src/main/gui/inserimento_turno.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>311</width>
-    <height>244</height>
+    <width>762</width>
+    <height>473</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,14 +21,14 @@
    <widget class="QTabWidget" name="inserimentoturno_tabs">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>304</width>
-      <height>181</height>
+      <x>10</x>
+      <y>10</y>
+      <width>741</width>
+      <height>391</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="dati_tab">
      <attribute name="title">
@@ -37,64 +37,34 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>61</width>
-        <height>16</height>
+        <x>20</x>
+        <y>240</y>
+        <width>121</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
-       <string>Inizio Turno:</string>
+       <string>Ora Inizio Turno:</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>40</y>
-        <width>61</width>
-        <height>16</height>
+        <x>20</x>
+        <y>280</y>
+        <width>121</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
-       <string>Fine Turno:</string>
-      </property>
-     </widget>
-     <widget class="QDateTimeEdit" name="inizio_datepicker">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>10</y>
-        <width>194</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QDateTimeEdit" name="fine_datepicker">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>40</y>
-        <width>194</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="servizio_combo">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>70</y>
-        <width>194</width>
-        <height>22</height>
-       </rect>
+       <string>Ora Fine Turno:</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>70</y>
+        <x>20</x>
+        <y>10</y>
         <width>47</width>
         <height>13</height>
        </rect>
@@ -102,6 +72,128 @@
       <property name="text">
        <string>Servizio:</string>
       </property>
+     </widget>
+     <widget class="QTimeEdit" name="time_end_field">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>280</y>
+        <width>191</width>
+        <height>28</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QTimeEdit" name="time_start_field">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>240</y>
+        <width>191</width>
+        <height>28</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>205</y>
+        <width>121</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Data:</string>
+      </property>
+     </widget>
+     <widget class="QDateEdit" name="date_field">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>200</y>
+        <width>191</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="tabletTracking">
+       <bool>true</bool>
+      </property>
+      <property name="calendarPopup">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="search_field">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>10</y>
+        <width>581</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>10</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/images/loupe (1) (1).png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QTableWidget" name="tabella_servizi">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>30</y>
+        <width>601</width>
+        <height>161</height>
+       </rect>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>150</number>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderCascadingSectionResizes">
+       <bool>false</bool>
+      </attribute>
+      <row>
+       <property name="text">
+        <string>DADADAD</string>
+       </property>
+      </row>
+      <column>
+       <property name="text">
+        <string>ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Tipo</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Luogo</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Periodicità</string>
+       </property>
+      </column>
      </widget>
     </widget>
     <widget class="QWidget" name="mezzi_widget">
@@ -154,8 +246,8 @@
        <rect>
         <x>10</x>
         <y>15</y>
-        <width>65</width>
-        <height>13</height>
+        <width>81</width>
+        <height>16</height>
        </rect>
       </property>
       <property name="text">
@@ -190,8 +282,8 @@
    <widget class="QPushButton" name="inserisci_button">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>190</y>
+      <x>460</x>
+      <y>410</y>
       <width>141</width>
       <height>23</height>
      </rect>
@@ -220,8 +312,8 @@ font:  bold 11px
    <widget class="QPushButton" name="annulla_button">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>190</y>
+      <x>610</x>
+      <y>410</y>
       <width>141</width>
       <height>23</height>
      </rect>
