--- a/src/main/gui/turni.ui
+++ b/src/main/gui/turni.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>624</width>
-    <height>525</height>
+    <width>777</width>
+    <height>587</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -48,13 +48,13 @@ font:  bold 11px
      <string>VISUALIZZA</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="search_button">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>20</y>
-      <width>21</width>
-      <height>21</height>
+      <x>200</x>
+      <y>70</y>
+      <width>41</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -95,8 +95,8 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
-      <width>611</width>
+      <y>130</y>
+      <width>751</width>
       <height>421</height>
      </rect>
     </property>
@@ -127,17 +127,22 @@ font:  bold 11px
     </column>
     <column>
      <property name="text">
-      <string>Nome</string>
+      <string>Servizio</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>Cognome</string>
+      <string>Data</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>Stato</string>
+      <string>Mezzo</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Operatore</string>
      </property>
     </column>
    </widget>
@@ -174,8 +179,8 @@ font:  bold 11px
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>13</x>
-      <y>60</y>
+      <x>30</x>
+      <y>50</y>
       <width>601</width>
       <height>16</height>
      </rect>
@@ -214,10 +219,10 @@ font:  bold 11px
      <string>ELIMINA</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="indietr_button">
+   <widget class="QPushButton" name="indietro_button">
     <property name="geometry">
      <rect>
-      <x>540</x>
+      <x>680</x>
       <y>20</y>
       <width>75</width>
       <height>23</height>
@@ -244,14 +249,131 @@ font:  bold 11px
      <string>INDIETRO</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="search_field">
+   <widget class="QDateEdit" name="date_filter">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>20</y>
-      <width>161</width>
-      <height>21</height>
+      <x>100</x>
+      <y>70</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="warning_label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>601</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="palette">
+     <palette>
+      <active>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Text">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="PlaceholderText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="128">
+          <red>255</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </active>
+      <inactive>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Text">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="PlaceholderText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="128">
+          <red>255</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </inactive>
+      <disabled>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>190</red>
+          <green>190</green>
+          <blue>190</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Text">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>190</red>
+          <green>190</green>
+          <blue>190</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="PlaceholderText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="128">
+          <red>0</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </disabled>
+     </palette>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Filtro Data:</string>
     </property>
    </widget>
   </widget>
