--- a/src/main/gui/visualizza_turno.ui
+++ b/src/main/gui/visualizza_turno.ui
@@ -78,7 +78,7 @@ font:  bold 11px
      <string>ELIMINA</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="salva_button">
+   <widget class="QPushButton" name="modifica_button">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -118,7 +118,7 @@ font:  bold 11px
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="dati_tab_2">
      <attribute name="title">
@@ -129,7 +129,7 @@ font:  bold 11px
        <rect>
         <x>10</x>
         <y>40</y>
-        <width>61</width>
+        <width>81</width>
         <height>16</height>
        </rect>
       </property>
@@ -142,7 +142,7 @@ font:  bold 11px
        <rect>
         <x>10</x>
         <y>70</y>
-        <width>61</width>
+        <width>81</width>
         <height>16</height>
        </rect>
       </property>
@@ -163,7 +163,7 @@ font:  bold 11px
        <string>Servizio:</string>
       </property>
      </widget>
-     <widget class="QLabel" name="inizio_label">
+     <widget class="QLabel" name="ora_inizio_label">
       <property name="geometry">
        <rect>
         <x>90</x>
@@ -176,7 +176,7 @@ font:  bold 11px
        <string/>
       </property>
      </widget>
-     <widget class="QLabel" name="fine_label">
+     <widget class="QLabel" name="ora_fine_label">
       <property name="geometry">
        <rect>
         <x>90</x>
@@ -215,7 +215,7 @@ font:  bold 11px
        <string>ID:</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="id_label">
       <property name="geometry">
        <rect>
         <x>90</x>
@@ -269,8 +269,8 @@ font:  bold 11px
        <rect>
         <x>10</x>
         <y>15</y>
-        <width>65</width>
-        <height>13</height>
+        <width>81</width>
+        <height>16</height>
        </rect>
       </property>
       <property name="text">
